Allow availability zone selection when creating an instance

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,19 @@ task wrapper(type: Wrapper) {
   gradleVersion = '1.8'
 }
 
+jar {
+    from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude "META-INF/*.SF"
+        exclude "META-INF/*.DSA"
+        exclude "META-INF/*.RSA"
+    }
+
+    manifest {
+        attributes 'Implementation-Title': 'gramazon',
+                'Implementation-Version': version,
+                'Built-By': System.getProperty('user.name'),
+                'Built-Date': new Date(),
+                'Built-JDK': System.getProperty('java.version')
+    }
+}
+
